--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <body>
 
 <div id="custom_nav_bar"></div>
+<script>
+	document.getElementById("intro").className = "active";
+</script>
 
   
 <div class="container">
