--- a/machine_learning.html
+++ b/machine_learning.html
@@ -17,6 +17,9 @@
 <body>
 
 <div id="custom_nav_bar"></div>
+<script>
+	document.getElementById("machine_learning").className = "active";
+</script>
   
 <div class="container">
   <h3>Basic Navbar Example</h3>
