--- a/nav_bar.html
+++ b/nav_bar.html
@@ -4,7 +4,7 @@
       <a class="navbar-brand" href="./index.html">Portfolio</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="">Wstęp</a></li>
+      <li><a href="">Wstęp</a></li>
 	  <li><a href="./signaly_kr.html">Signaly kr aplikacja</a></li>
       <li><a href="./emet.html">Emet aplikacja</a></li>
       <li><a href="./machine_learning.html">Machine learning</a></li>
