--- a/web_dev.html
+++ b/web_dev.html
@@ -17,6 +17,9 @@
 <body>
 
 <div id="custom_nav_bar"></div>
+<script>
+	document.getElementById("web_dev").className = "active";
+</script>
   
 <div class="container">
   <h3>Basic Navbar Example</h3>
