--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <script src="jquery.js"></script>
   <script> 
     $(function(){
-      $("#custom_nav_bar").load("nav_bar.html"); 
+      $("#custom_nav_bar").load("nav_bar.html");
+	  $("#intro").addClass("active");
     });
   </script> 
 </head>
