--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src="jquery.js"></script>
   <script> 
     $(function(){
       $("#custom_nav_bar").load("nav_bar.html");
-	  $("#intro").addClass("active");
     });
+	$("button").click(function(){
+	  $("#intro").addClass("active");
+	});
   </script> 
 </head>
 <body>
 
 <div id="custom_nav_bar"></div>
-<script>
-	document.getElementById("intro").className = "active";
-</script>
+
+<button>Add</button>
+
 
   
 <div class="container">
