--- a/nav_bar.html
+++ b/nav_bar.html
@@ -4,11 +4,11 @@
       <a class="navbar-brand" href="./index.html">Portfolio</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="./index.html">Wstęp</a></li>
-	  <li><a href="./signaly_kr.html">Signaly kr aplikacja</a></li>
-      <li><a href="./emet.html">Emet aplikacja</a></li>
-      <li><a href="./machine_learning.html">Machine learning</a></li>
-	  <li><a href="./web_dev.html">Web development</a></li>
+      <li id="intro"><a href="./index.html">Wstęp</a></li>
+	  <li id="signaly_kr"><a href="./signaly_kr.html">Signaly kr aplikacja</a></li>
+      <li id="emet"><a href="./emet.html">Emet aplikacja</a></li>
+      <li id="machine_learning"><a href="./machine_learning.html">Machine learning</a></li>
+	  <li id="web_dev"><a href="./web_dev.html">Web development</a></li>
     </ul>
   </div>
 </nav>
