--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="jquery.js"></script>
   <script> 
     $(function(){
-      $("#custom_nav_bar").load("nav_bar.html", function(){
-	    $("#intro").addClass("active")
-	  });
+      $("#custom_nav_bar").load("nav_bar.html");
     });
   </script> 
 </head>
 <body>
 
 <div id="custom_nav_bar"></div>
-
-
+<script>
+	document.getElementById("intro").className = "active";
+</script>
 
   
 <div class="container">
