--- a/emet.html
+++ b/emet.html
@@ -9,7 +9,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script> 
     $(function(){
-      $("#custom_nav_bar").load("nav_bar.html"); 
+      $("#custom_nav_bar").load("nav_bar.html", function(){
+	    $(this).find('#emet').addClass('active');
+	  }); 
     });
   </script> 
 </head>
