collapse_nav_bar

--- a/emet.html
+++ b/emet.html
@@ -13,6 +13,9 @@
 	    $(this).find('#emet').addClass('active');
 	  }); 
     });
+	$(function(){
+      $("#content").load("emet_content.html");
+	});
   </script> 
 </head>
 <body>
