--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 <body>
 
 <div id="custom_nav_bar"></div>
-
-
+<div id="content"></div>
   
 <div class="container">
   <h3>Basic Navbar Example</h3>
