--- a/signaly_kr.html
+++ b/signaly_kr.html
@@ -13,6 +13,9 @@
 	    $(this).find('#signaly_kr').addClass('active');
 	  }); 
     });
+	$(function(){
+      $("#content").load("signaly_kr_content.html");
+	});
   </script> 
 </head>
 <body>
