--- a/web_dev.html
+++ b/web_dev.html
@@ -13,6 +13,9 @@
 	    $(this).find('#web_dev').addClass('active');
 	  }); 
     });
+	$(function(){
+      $("#content").load("web_dev_content.html");
+	});
   </script> 
 </head>
 <body>
