--- a/nav_bar.html
+++ b/nav_bar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-expand-md">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="./index.html">Portfolio</a>
