--- a/nav_bar.html
+++ b/nav_bar.html
@@ -3,6 +3,12 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="./index.html">Portfolio</a>
     </div>
+	
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+	
+	<div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="nav navbar-nav">
       <li id="intro"><a href="./index.html">Wstęp</a></li>
 	  <li id="signaly_kr"><a href="./signaly_kr.html">Signaly kr aplikacja</a></li>
@@ -10,5 +16,7 @@
       <li id="machine_learning"><a href="./machine_learning.html">Machine learning</a></li>
 	  <li id="web_dev"><a href="./web_dev.html">Web development</a></li>
     </ul>
+	</div>
   </div>
+  
 </nav>
