--- a/machine_learning.html
+++ b/machine_learning.html
@@ -4,10 +4,10 @@
   <title>P. Kraszewski</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     $(function(){
       $("#custom_nav_bar").load("nav_bar.html", function(){
 	    $(this).find('#machine_learning').addClass('active');
@@ -21,9 +21,6 @@
 <body>
 
 <div id="custom_nav_bar"></div>
-<script>
-	document.getElementById("machine_learning").className = "active";
-</script>
   
 <div class="container">
   <h3>Basic Navbar Example</h3>
