--- a/nav_bar.html
+++ b/nav_bar.html
@@ -1,22 +1,26 @@
-<nav class="navbar navbar-inverse navbar-expand-md">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="./index.html">Portfolio</a>
-    </div>
-	
+
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <a class="navbar-brand" href="./index.html">Portfolio</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-	
+		<span class="navbar-toggler-icon"></span>
+	</button>
 	<div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="nav navbar-nav">
-      <li id="intro"><a href="./index.html">Wstęp</a></li>
-	  <li id="signaly_kr"><a href="./signaly_kr.html">Signaly kr aplikacja</a></li>
-      <li id="emet"><a href="./emet.html">Emet aplikacja</a></li>
-      <li id="machine_learning"><a href="./machine_learning.html">Machine learning</a></li>
-	  <li id="web_dev"><a href="./web_dev.html">Web development</a></li>
-    </ul>
+		<ul class="navbar-nav">
+		  <li class="nav-item" id="intro">
+			<a class="nav-link" href="./index.html">Wstęp</a>
+		  </li>
+		  <li class="nav-item" id="signaly_kr">
+		    <a class="nav-link" href="./signaly_kr.html">Signaly kr aplikacja</a>
+		  </li>
+		  <li class="nav-item" id="emet">
+		    <a class="nav-link" href="./emet.html">Emet aplikacja</a>
+		  </li>
+		  <li class="nav-item" id="machine_learning">
+		    <a class="nav-link" href="./machine_learning.html">Machine learning</a>
+		  </li>
+		  <li class="nav-item" id="web_dev">
+		    <a class="nav-link" href="./web_dev.html">Web development</a>
+		  </li>
+		</ul>
 	</div>
-  </div>
-  
 </nav>
