--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
 	    $(this).find('#intro').addClass('active');
 	  });
     });
+	$(function(){
+      $("#content").load("intro_content.html");
+	});
   </script> 
 </head>
 <body>
 
 <div id="custom_nav_bar"></div>
 <div id="content"></div>
-  
+
+</br>
 <div class="container">
   <h3>Basic Navbar Example</h3>
   <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
