--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 <div id="custom_nav_bar"></div>
 <div id="content"></div>
 
+</br>
+<div class="container">
+  <h3>Basic Navbar Example</h3>
+  <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
+</div>
 
 </body>
 </html>
