--- a/nav_bar.html
+++ b/nav_bar.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-    <a class="navbar-brand" href="./index.html">Portfolio</a>
+    <a class="navbar-brand" href="./index.html"><strong>Portfolio</strong></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 		<span class="navbar-toggler-icon"></span>
 	</button>
