--- a/intro_content.html
+++ b/intro_content.html
@@ -1,4 +1,8 @@
 <div class="container-fluid">
   <h3>Wstęp</h3>
-  <p>Lorem ipsum</p>
+  <p>
+    Strona internetowa stworzona by przedstawić niektóre z
+    <br>moich najważniejszych projektów programistycznych,
+    <br>które wykonałem na potrzeby edukacji jak i projektów komercyjnych.
+  </p>
 </div>
