--- a/intro_content.html
+++ b/intro_content.html
@@ -4,6 +4,6 @@
   <p>
     Strona internetowa stworzona by przedstawić niektóre z
     <br>moich najważniejszych projektów programistycznych,
-    <br>które wykonałem na potrzeby edukacji jak i projektów komercyjnych.
+    <br>które wykonałem na potrzeby edukacji, jak i projektów komercyjnych.
   </p>
 </div>
