--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -1,4 +1,7 @@
 <div class="container-fluid">
   <h3>Signaly kr</h3>
-  <p>Lorem ipsum</p>
+  <video width="400" controls>
+    <source src="./src/movies/signaly_kr/signaly.mp4" type="video/mp4">
+    Your browser does not support HTML video.
+  </video>
 </div>
