--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -1,7 +1,13 @@
 <div class="container-fluid">
-  <h3>Signaly kr</h3>
-  <video width="300" controls>
-    <source src="./src/movies/signaly_kr/signaly.mp4" type="video/mp4">
-    Your browser does not support HTML video.
-  </video>
+  <div class="row">
+    <div class="col-sm-6">
+      <video width="300" controls>
+        <source src="./src/movies/signaly_kr/signaly.mp4" type="video/mp4">
+        Your browser does not support HTML video.
+      </video>
+    </div>
+    <div class="col-sm-6">
+      <h3>signaly_kr</h3>
+    </div>
+  </div>
 </div>
