--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -7,7 +7,8 @@
       </video>
     </div>
     <div class="col-sm-8">
-      <h3>signaly_kr</h3>
+      <h3>Signaly_kr</h3>
+      <p></p>
     </div>
   </div>
 </div>
