--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -8,9 +8,9 @@
     </div>
     <div class="col-sm-9">
       <h3>Signaly_kr</h3>
-      <p>Moja nowa aplikacja do nauki alfabetu koreańskiego i wymowy koreańskiej.<br>
+      <p>Moja nowa aplikacja na Androida do nauki alfabetu koreańskiego i wymowy koreańskiej.<br>
         Przy projektowaniu zwracałem uwagę na to, aby zaangażowanie użytkownika było jak największe.<br>
-        Dwie z głównych funkcjonalności bazują na czynnościach esencjonalnych dla nauki języka: pisanie i mówienie.
+        Dwie z głównych funkcjonalności bazują na czynnościach esencjonalnych dla nauki języka: pisanie i mówienie.<br>
         Starałem się aby interakcja była jak najbardziej naturalna i wzbudzała uczucie satysfakcji,<br>
         aby użytkownik chciał korzystać z aplikacji i osiągał pożądane efekty w nauce.<br>
         Aby osiągnąć mój cel zaprogramowałem system, który sprawdza czy narysowany przez użytkownika znak<br>
@@ -19,6 +19,7 @@
         Druga funkcjonalość zachęca do wypowiadnia podanych słów co pomaga w ich zapamiętywaniu.<br>
         Dodatkowo aplikacja pokazuję poziom pewności, że właśnie podane słowo zostało wypowiedziane co pozwala na polepszanie swojej wymowy.<br>
        </p>
+       <a href="https://github.com/nestrockx/signalyKR.git">Link do pliku apk</a>
     </div>
   </div>
 </div>
