--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -8,18 +8,18 @@
     </div>
     <div class="col-sm-9">
       <h3>Signaly_kr</h3>
-      <p>Moja nowa aplikacja na Androida do nauki alfabetu koreańskiego i wymowy koreańskiej.<br>
-        Przy projektowaniu zwracałem uwagę na to, aby zaangażowanie użytkownika było jak największe.<br>
-        Dwie z głównych funkcjonalności bazują na czynnościach esencjonalnych dla nauki języka: pisanie i mówienie.<br>
-        Starałem się aby interakcja była jak najbardziej naturalna i wzbudzała uczucie satysfakcji,<br>
-        aby użytkownik chciał korzystać z aplikacji i osiągał pożądane efekty w nauce.<br>
-        Aby osiągnąć mój cel zaprogramowałem system, który sprawdza czy narysowany przez użytkownika znak<br>
-        pokrywa się ze znakiem podanym w przykładzie i zaimplementowałem kształty wszystkich znaków koreańskiego alfabetu Hangul.<br>
-        System ten pozwala na szybką naukę znaków i przetestowania nabytych umiejętności w zakresie pisma koreańskiego.<br>
-        Druga funkcjonalość zachęca do wypowiadnia podanych słów co pomaga w ich zapamiętywaniu.<br>
-        Dodatkowo aplikacja pokazuję poziom pewności, że właśnie podane słowo zostało wypowiedziane co pozwala na polepszanie swojej wymowy.<br>
+      <p style="text-align:justify">Moja nowa aplikacja na Androida do nauki alfabetu koreańskiego i wymowy koreańskiej.
+        Przy projektowaniu zwracałem uwagę na to, aby zaangażowanie użytkownika było jak największe.
+        Dwie z głównych funkcjonalności bazują na czynnościach esencjonalnych dla nauki języka: pisanie i mówienie.
+        Starałem się aby interakcja była jak najbardziej naturalna i wzbudzała uczucie satysfakcji,
+        aby użytkownik chciał korzystać z aplikacji i osiągał pożądane efekty w nauce.
+        Aby osiągnąć mój cel zaprogramowałem system, który sprawdza czy narysowany przez użytkownika znak
+        pokrywa się ze znakiem podanym w przykładzie i zaimplementowałem kształty wszystkich znaków koreańskiego alfabetu Hangul.
+        System ten pozwala na szybką naukę znaków i przetestowania nabytych umiejętności w zakresie pisma koreańskiego.
+        Druga funkcjonalość zachęca do wypowiadnia podanych słów co pomaga w ich zapamiętywaniu.
+        Dodatkowo aplikacja pokazuję poziom pewności, że właśnie podane słowo zostało wypowiedziane co pozwala na polepszanie swojej wymowy.
        </p>
-       <a href="https://github.com/nestrockx/signalyKR.git">Link do pliku apk</a>
+       <a href="https://github.com/nestrockx/signalyKR.git" target="_blank">Link do pliku apk</a>
     </div>
   </div>
 </div>
