--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -7,7 +7,7 @@
       </video>
     </div>
     <div class="col-sm-9">
-      <h3>Signaly_kr</h3>
+      <h3>Signaly koreański</h3>
       <p style="text-align:justify">Moja nowa aplikacja na Androida do nauki alfabetu koreańskiego i wymowy koreańskiej.
         Przy projektowaniu zwracałem uwagę na to, aby zaangażowanie użytkownika było jak największe.
         Dwie z głównych funkcjonalności bazują na czynnościach esencjonalnych dla nauki języka: pisanie i mówienie.
