--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -9,7 +9,7 @@
     </div>
     <div class="col-sm-9">
       <h3>Signaly koreański</h3>
-      <p style="text-align:justify">Moja nowa aplikacja na Androida do nauki alfabetu koreańskiego i wymowy koreańskiej.
+      <p style="text-align:justify">Moja nowa aplikacja na Androida do nauki alfabetu koreańskiego i wymowy koreańskiej.<br>
         Przy projektowaniu zwracałem uwagę na to, aby zaangażowanie użytkownika było jak największe.
         Dwie z głównych funkcjonalności bazują na czynnościach esencjonalnych dla nauki języka: pisanie i mówienie.
         Starałem się aby interakcja była jak najbardziej naturalna i wzbudzała uczucie satysfakcji,
