--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -20,7 +20,7 @@
         Druga funkcjonalość zachęca do wypowiadnia podanych słów co pomaga w ich zapamiętywaniu.
         Dodatkowo aplikacja pokazuję poziom pewności, że właśnie podane słowo zostało wypowiedziane co pozwala na polepszanie swojej wymowy.
        </p>
-       <a style"color: #DB7093;" href="https://github.com/nestrockx/signalyKR.git" target="_blank">Link do pliku apk</a>
+       <a href="https://github.com/nestrockx/signalyKR.git" target="_blank" style="color: #DB7093;">Link do pliku apk</a>
     </div>
   </div>
 </div>
