--- a/intro_content.html
+++ b/intro_content.html
@@ -3,6 +3,6 @@
     Strona internetowa stworzona by przedstawić niektóre z
     <br>moich najważniejszych projektów programistycznych,
     <br>które wykonałem na potrzeby edukacji, jak i projektów komercyjnych.
-    <a href="./signaly_kr" style="color: #DB7093;">Przejdź dalej</a>
+    <br><a href="./signaly_kr" style="color: #DB7093;">Przejdź dalej</a>
   </p>
 </div>
