--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -12,7 +12,7 @@
       <p style="text-align:justify">Moja nowa aplikacja na Androida do nauki alfabetu koreańskiego i wymowy koreańskiej.<br>
         Przy projektowaniu zwracałem uwagę na to, aby zaangażowanie użytkownika było jak największe.
         Dwie z głównych funkcjonalności bazują na czynnościach esencjonalnych dla nauki języka: pisanie i mówienie.
-        Starałem się aby interakcja była jak najbardziej naturalna i wzbudzała uczucie satysfakcji,
+        Starałem się by interakcja była jak najbardziej naturalna i wzbudzała uczucie satysfakcji,
         aby użytkownik chciał korzystać z aplikacji i osiągał pożądane efekty w nauce.
         Aby osiągnąć mój cel zaprogramowałem system, który sprawdza czy narysowany przez użytkownika znak
         pokrywa się ze znakiem podanym w przykładzie i zaimplementowałem kształty wszystkich znaków koreańskiego alfabetu Hangul.
