--- a/nav_bar.html
+++ b/nav_bar.html
@@ -13,7 +13,7 @@
 		    <a class="nav-link" href="./signaly_kr.html">Signaly kr aplikacja</a>
 		  </li>
 		  <li class="nav-item" id="emet">
-		    <a class="nav-link" href="./emet.html">Emet aplikacja</a>
+		    <a class="nav-link" href="./emet.html">Emet - asystent głosowy aplikacja</a>
 		  </li>
 		  <li class="nav-item" id="machine_learning">
 		    <a class="nav-link" href="./machine_learning.html">Machine learning</a>
