--- a/nav_bar.html
+++ b/nav_bar.html
@@ -10,10 +10,10 @@
 			  <a class="nav-link" href="./index.html">Wstęp</a>
 		  </li>
 		  <li class="nav-item" id="signaly_kr">
-		    <a class="nav-link" href="./signaly_kr.html">Signaly kr aplikacja</a>
+		    <a class="nav-link" href="./signaly_kr.html">Signaly kr</a>
 		  </li>
 		  <li class="nav-item" id="emet">
-		    <a class="nav-link" href="./emet.html">Emet - asystent głosowy aplikacja</a>
+		    <a class="nav-link" href="./emet.html">Emet - asystent głosowy</a>
 		  </li>
 		  <li class="nav-item" id="machine_learning">
 		    <a class="nav-link" href="./machine_learning.html">Machine learning</a>
