--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -9,14 +9,14 @@
     </div>
     <div class="col-sm-9">
       <h3>Signaly koreański</h3>
-      <p style="text-align:justify">Moja nowa aplikacja na Androida do nauki alfabetu i wymowy koreańskiej.<br>
+      <p style="text-align:justify">Moja nowa aplikacja na Androida do nauki alfabetu i wymowy koreańskiej.<br><br>
         Przy projektowaniu zwracałem uwagę na to, aby zaangażowanie użytkownika było jak największe.
         Dwie z głównych funkcjonalności bazują na czynnościach esencjonalnych dla nauki języka: pisanie i mówienie.
         Starałem się by interakcja była jak najbardziej naturalna i wzbudzała uczucie satysfakcji,
-        aby użytkownik chciał korzystać z aplikacji i osiągał pożądane efekty w nauce.<br>
+        aby użytkownik chciał korzystać z aplikacji i osiągał pożądane efekty w nauce.<br><br>
         Aby osiągnąć mój cel zaprogramowałem system, który sprawdza czy narysowany przez użytkownika znak
         pokrywa się ze znakiem podanym w przykładzie i zaimplementowałem kształty wszystkich znaków koreańskiego alfabetu Hangul.
-        System ten pozwala na szybką naukę znaków i przetestowania nabytych umiejętności w zakresie pisma koreańskiego.<br>
+        System ten pozwala na szybką naukę znaków i przetestowania nabytych umiejętności w zakresie pisma koreańskiego.<br><br>
         Druga funkcjonalość zachęca do wypowiadnia podanych słów co pomaga w ich zapamiętywaniu.
         Dodatkowo aplikacja pokazuję poziom pewności, że właśnie podane słowo zostało wypowiedziane co pozwala na polepszanie swojej wymowy.
        </p>
