--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -19,7 +19,7 @@
         pokrywa się ze znakiem podanym w przykładzie i zaimplementowałem kształty wszystkich znaków koreańskiego alfabetu Hangul.
         System ten pozwala na szybką naukę znaków i przetestowania nabytych umiejętności w zakresie pisma koreańskiego.<br><br>
         Druga funkcjonalość zachęca do wypowiadnia podanych słów co pomaga w ich zapamiętywaniu.
-        Dodatkowo aplikacja pokazuję poziom pewności, że właśnie podane słowo zostało wypowiedziane co pozwala na polepszanie swojej wymowy.
+        Dodatkowo, dzięki usłudze rozpoznwania mowy od Google, aplikacja pokazuję poziom pewności, że właśnie podane słowo zostało wypowiedziane co pozwala na polepszanie swojej wymowy.
        </p>
        <a href="https://github.com/nestrockx/signalyKR.git" target="_blank" style="color: #DB7093;">Link do pliku apk</a>
        <br>
