--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -18,7 +18,7 @@
         Aby osiągnąć mój cel zaprogramowałem system, który sprawdza czy narysowany przez użytkownika znak
         pokrywa się ze znakiem podanym w przykładzie i zaimplementowałem kształty wszystkich znaków koreańskiego alfabetu Hangul.
         System ten pozwala na szybką naukę znaków i przetestowania nabytych umiejętności w zakresie pisma koreańskiego.<br><br>
-        Druga funkcjonalość zachęca do wypowiadnia podanych słów co pomaga w ich zapamiętywaniu.
+        Druga funkcjonalość niejako wymaga wypowiedzenia podanych słów co pomaga w ich zapamiętywaniu.
         Dodatkowo, dzięki usłudze rozpoznwania mowy od Google, aplikacja pokazuję poziom pewności, że podane słowo zostało wypowiedziane poprawnie, co pozwala na polepszanie swojej wymowy.
        </p>
        <a href="https://github.com/nestrockx/signalyKR.git" target="_blank" style="color: #DB7093;">Link do pliku apk</a>
