--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-3">
       <p>film demonstracyjny</p>
-      <video controls autoplay>
+      <video width="260" autoplay>
         <source src="./src/movies/signaly_kr/signaly.mp4" type="video/mp4">
         Your browser does not support HTML video.
       </video>
