--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -21,7 +21,8 @@
         Druga funkcjonalość niejako wymaga wypowiedzenia podanych słów co pomaga w ich zapamiętywaniu.
         Dodatkowo, dzięki usłudze rozpoznwania mowy od Google, aplikacja pokazuję poziom pewności, że podane słowo zostało wypowiedziane poprawnie, co pozwala na polepszanie swojej wymowy.
        </p>
-       <a href="https://github.com/nestrockx/signalyKR.git" target="_blank" style="color: #DB7093;">Link do pliku apk</a>
+       <a href="https://play.google.com/store/apps/details?id=com.onehundredtwo.testvoicy" target="-blank" style="color: #DB7093;">Link do sklepu play</a>
+       <a href="https://github.com/nestrockx/signalyKR.git" target="_blank" style="color: #DB7093;">Link do repozytorium z najnowszą wersją pliku apk</a>
        <br>
     </div>
   </div>
