--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -23,7 +23,7 @@
        </p>
        <a href="https://play.google.com/store/apps/details?id=com.onehundredtwo.testvoicy" target="-blank" style="color: #DB7093;">Link do sklepu play</a>
        <br>
-       <a href="https://github.com/nestrockx/signalyKR.git" target="_blank" style="color: #DB7093;">Link do repozytorium z najnowszą wersją pliku apk</a>
+       <a href="https://github.com/nestrockx/signalyKR.git" target="_blank" style="color: #DB7093;">Link do repozytorium z najnowszą wersją apk</a>
        <br>
     </div>
   </div>
