--- a/emet_content.html
+++ b/emet_content.html
@@ -1,4 +1,21 @@
 <div class="container-fluid">
-  <h3>Emet</h3>
-  <p>Lorem ipsum</p>
+  <div class="row">
+    <div class="col-sm-3">
+      <p>film demonstracyjny</p>
+      <video width="260" controls autoplay muted>
+        <source src="./src/movies/signaly_kr/signaly.mp4" type="video/mp4">
+        Your browser does not support HTML video.
+      </video>
+    </div>
+    <div class="col-sm-9">
+      <h3>Emet</h3>
+      <br>
+      <p style="text-align:justify">
+
+      </p>
+      <a href="https://play.google.com/store/apps/details?id=com.onehundredtwo.testvoicy" target="-blank" style="color: #DB7093;">Link do sklepu play</a>
+      <br>
+      <a href="https://github.com/nestrockx/signalyKR.git" target="_blank" style="color: #DB7093;">Link do repozytorium z najnowszą wersją apk</a>
+      <br>
+    </div>
 </div>
