--- a/emet_content.html
+++ b/emet_content.html
@@ -13,9 +13,7 @@
       <p style="text-align:justify">
 
       </p>
-      <a href="https://play.google.com/store/apps/details?id=com.onehundredtwo.testvoicy" target="-blank" style="color: #DB7093;">Link do sklepu play</a>
-      <br>
-      <a href="https://github.com/nestrockx/signalyKR.git" target="_blank" style="color: #DB7093;">Link do repozytorium z najnowszą wersją apk</a>
+      <a href="https://github.com/nestrockx/signalyKR.git" target="_blank" style="color: #DB7093;">Link do repozytorium z apk</a>
       <br>
     </div>
 </div>
