--- a/emet_content.html
+++ b/emet_content.html
@@ -13,7 +13,7 @@
       <p style="text-align:justify">
 
       </p>
-      <a href="https://github.com/nestrockx/signalyKR.git" target="_blank" style="color: #DB7093;">Link do repozytorium z apk</a>
+      <a href="https://github.com/nestrockx/emet-voice-assistant.git" target="_blank" style="color: #DB7093;">Link do repozytorium z apk</a>
       <br>
     </div>
 </div>
