--- a/emet_content.html
+++ b/emet_content.html
@@ -3,7 +3,7 @@
     <div class="col-sm-3">
       <p>film demonstracyjny</p>
       <video width="260" controls autoplay muted>
-        <source src="./src/movies/signaly_kr/signaly.mp4" type="video/mp4">
+        <source src="./src/movies/emet/emet.mp4" type="video/mp4">
         Your browser does not support HTML video.
       </video>
     </div>
@@ -11,7 +11,7 @@
       <h3>Emet</h3>
       <br>
       <p style="text-align:justify">
-        
+
       </p>
       <a href="https://github.com/nestrockx/emet-voice-assistant.git" target="_blank" style="color: #DB7093;">Link do repozytorium z apk</a>
       <br>
