--- a/emet_content.html
+++ b/emet_content.html
@@ -11,7 +11,12 @@
       <h3>Emet</h3>
       <br>
       <p style="text-align:justify">
-
+        Asystent głosowy obsługujący język polski(i angielski) wypuszczony przeze mnie pół roku
+        przed oficjalnym launchem asystenta google w Polsce.<br><br>
+        Umożliwiał on wykonywanie wszystkich podstawowcych czynności do zarządzania telefonem.
+        Takich jak dzwonienie na podany kontakt, uruchamianie aplikacji, ustawianie budzika,
+        wyszukiwanie haseł w wikipedii, wysyłanie SMSów, obsługa nawigacji itd.<br><br>
+        Jak widać na filmie, mimo że tworzyłem go z myślą o wersji systemu Android 6.0, działa równie dobrze na Androidzie 10.
       </p>
       <a href="https://github.com/nestrockx/emet-voice-assistant.git" target="_blank" style="color: #DB7093;">Link do repozytorium z apk</a>
       <br>
