--- a/machine_learning_content.html
+++ b/machine_learning_content.html
@@ -1,4 +1,10 @@
 <div class="container-fluid">
   <h3>Machine learning</h3>
   <p>Lorem ipsum</p>
+
+
+
+  <a href="https://github.com/nestrockx/Machine_learning.git" target="_blank" style="color: #DB7093;">Link do repozytorium</a>
+
+
 </div>
