--- a/nav_bar.html
+++ b/nav_bar.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+<nav class="navbar fixed-top navbar-expand-md bg-dark navbar-dark">
     <strong><a class="navbar-brand" href="./index.html">Portfolio</a></strong>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 		<span class="navbar-toggler-icon"></span>
