--- a/emet_content.html
+++ b/emet_content.html
@@ -11,7 +11,7 @@
       <h3>Emet</h3>
       <br>
       <p style="text-align:justify">
-        Asystent głosowy obsługujący język polski(i angielski) wypuszczony przeze mnie pół roku
+        Asystent głosowy obsługujący język polski(i angielski) wypuszczony przeze mnie 9 miesięcy
         przed oficjalnym launchem asystenta google w Polsce.<br><br>
         Umożliwiał on wykonywanie wszystkich podstawowcych czynności do zarządzania telefonem.
         Takich jak dzwonienie na podany kontakt, uruchamianie aplikacji, ustawianie budzika,
