--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -18,8 +18,8 @@
         Aby osiągnąć mój cel zaprogramowałem system, który sprawdza czy narysowany przez użytkownika znak
         pokrywa się ze znakiem podanym w przykładzie i zaimplementowałem kształty wszystkich znaków koreańskiego alfabetu Hangul.
         System ten pozwala na szybką naukę znaków i przetestowania nabytych umiejętności w zakresie pisma koreańskiego.<br><br>
-        Druga funkcjonalość niejako wymaga wypowiedzenia podanych słów co pomaga w ich zapamiętywaniu.
-        Dodatkowo, dzięki usłudze rozpoznwania mowy od Google, aplikacja pokazuję poziom pewności, że podane słowo zostało wypowiedziane poprawnie, co pozwala na polepszanie swojej wymowy.
+        Druga funkcjonalość niejako wymaga od użytkownika wypowiedzenia podanych słów, co pomaga w ich zapamiętywaniu.
+        Dodatkowo, dzięki usłudze rozpoznwania mowy od Google, aplikacja pokazuję poziom pewności, iż podane słowo zostało wypowiedziane poprawnie, co pozwala na polepszanie swojej wymowy.
        </p>
        <a href="https://play.google.com/store/apps/details?id=com.onehundredtwo.testvoicy" target="-blank" style="color: #DB7093;">Link do sklepu play</a>
        <br>
