--- a/machine_learning_content.html
+++ b/machine_learning_content.html
@@ -1,10 +1,13 @@
 <div class="container-fluid">
-  <h3>Machine learning</h3>
-  <p>Lorem ipsum</p>
+  <h3>Programy</h3>
+  <br>
+  <h5>1. </h5>
+  <img src="./src/images/machine_learning_1.png" alt="algorytm k-środków screenshot">
+  <p>
 
+  </p>
+  <br><br>
 
-
-  <a href="https://github.com/nestrockx/Machine_learning.git" target="_blank" style="color: #DB7093;">Link do repozytorium</a>
-
+  <a href="https://github.com/nestrockx/Machine_learning.git" target="_blank" style="color: #DB7093;">Link do repozytorium z kodem</a>
 
 </div>
