--- a/machine_learning_content.html
+++ b/machine_learning_content.html
@@ -3,7 +3,7 @@
   <br>
   <h5>1. </h5>
   <br>
-  <img src="./src/images/machine_learning_1.png" alt="algorytm k-środków screenshot">
+  <img width="600px" src="./src/images/machine_learning_1.png" alt="algorytm k-środków screenshot">
   <p>
 
   </p>
