--- a/machine_learning_content.html
+++ b/machine_learning_content.html
@@ -1,11 +1,13 @@
 <div class="container-fluid">
   <h3>Programy</h3>
   <br>
-  <h5>1. </h5>
+  <h5>1. Algorytm k-środków</h5>
   <br>
-  <img width="600px" src="./src/images/machine_learning_1.png" alt="algorytm k-środków screenshot">
+  <img width="1000px" src="./src/images/machine_learning_1.png" alt="algorytm k-środków screenshot">
   <p>
-
+    Zaprogramowałem w pythonie funkcję, która realizuje algorytm k-środków.<br>
+    W tym przypadku dla danych 4 wymiarowych program najpierw dokonuje grupowania,<br>
+    a poźniej redukuje wymiarowość metodą PCA, by można było zwizualizować rezultat na płaszczyźnie.
   </p>
   <br><br>
 
