--- a/machine_learning_content.html
+++ b/machine_learning_content.html
@@ -1,8 +1,7 @@
 <div class="container-fluid">
   <h3>Programy</h3>
-  <br>
   <a href="https://github.com/nestrockx/Machine_learning.git" target="_blank" style="color: #DB7093;">Link do repozytorium z kodem</a>
-  <br>
+  <br><br>
   <h5>1. Algorytm k-środków</h5>
   <br>
   <img width="1000px" src="./src/images/machine_learning_1.png" alt="algorytm k-środków screenshot">
@@ -13,6 +12,10 @@
     a poźniej redukuje wymiarowość metodą PCA, by można było zwizualizować rezultat na płaszczyźnie.
   </p>
   <br><br>
+  <h5>2. Program klasyfikujący zdanie do książki</h5>
+  <br>
+  <img width="1000px" src="./src/images/machine_learning_1.png" alt="algorytm k-środków screenshot">
+  <br>
 
 
 
