--- a/machine_learning_content.html
+++ b/machine_learning_content.html
@@ -16,7 +16,9 @@
   <br>
   <img width="1000px" src="./src/images/machine_learning_2.png" alt="algorytm k-środków screenshot">
   <br>
-
-
-
+  <p>
+    Program oczyszcza tekst z nieistotnych z pounktu widzenia uczenia maszynowego informacji.
+    Później zmienia dane tekstowe(zdania z książek) na dane numeryczne, które można wykorzystać do trenowania modelu.
+    Na podstawie modelu program klasyfikuje dane testowe i pokazuje macierz pomyłek.
+  </p>
 </div>
