--- a/web_dev_content.html
+++ b/web_dev_content.html
@@ -1,4 +1,8 @@
 <div class="container-fluid">
   <h3>Web development</h3>
-  <p>Lorem ipsum</p>
+  <p>
+    Tę stronę napisałem z użyciem bootstrap 4.0<br>
+    Kontent każdej podstrony jest ładowany dynamicznie.<br>
+  </p>
+  <a href="https://github.com/nestrockx/Portfolio/tree/gh-pages" target="_blank" style="color: #DB7093;">Link do repozytorium z kodem strony</a>
 </div>
