--- a/emet_content.html
+++ b/emet_content.html
@@ -18,7 +18,7 @@
         wyszukiwanie haseł w wikipedii, wysyłanie SMSów, obsługa nawigacji itd.<br><br>
         Jak widać na filmie, mimo że tworzyłem go z myślą o wersji systemu Android 8.0, działa równie dobrze na Androidzie 10.
       </p>
-      <a href="https://github.com/nestrockx/emet-voice-assistant.git" target="_blank" style="color: #DB7093;">Link do repozytorium z apk</a>
+      <a href="https://github.com/nestrockx/emet-voice-assistant.git" target="_blank" style="color: #DB7093;">Repozytorium z apk</a>
       <br>
     </div>
 </div>
