--- a/machine_learning_content.html
+++ b/machine_learning_content.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <h3>Programy</h3>
-  <a href="https://github.com/nestrockx/Machine_learning.git" target="_blank" style="color: #DB7093;">Link do repozytorium z kodem</a>
+  <a href="https://github.com/nestrockx/Machine_learning.git" target="_blank" style="color: #DB7093;">Repozytorium z kodem</a>
   <br><br>
   <h5>1. Algorytm k-środków</h5>
   <br>
