--- a/web_dev_content.html
+++ b/web_dev_content.html
@@ -4,5 +4,5 @@
     Tę stronę napisałem z użyciem bootstrap 4.0<br>
     Kontent każdej podstrony jest ładowany dynamicznie.<br>
   </p>
-  <a href="https://github.com/nestrockx/Portfolio/tree/gh-pages" target="_blank" style="color: #DB7093;">Link do repozytorium z kodem strony</a>
+  <a href="https://github.com/nestrockx/Portfolio/tree/gh-pages" target="_blank" style="color: #DB7093;">Repozytorium z kodem strony</a>
 </div>
