--- a/web_dev_content.html
+++ b/web_dev_content.html
@@ -1,7 +1,6 @@
 <div class="container-fluid">
-  <h3>Web development</h3>
   <p>
-    Tę stronę napisałem z użyciem bootstrap 4.0<br>
+    Tę stronę napisałem z użyciem Bootstrap 4.0<br>
     Kontent każdej podstrony jest ładowany dynamicznie.<br>
   </p>
   <a href="https://github.com/nestrockx/Portfolio/tree/gh-pages" target="_blank" style="color: #DB7093;">Repozytorium z kodem strony</a>
