--- a/machine_learning_content.html
+++ b/machine_learning_content.html
@@ -4,7 +4,7 @@
   <br><br>
   <h5>1. Algorytm k-środków</h5>
   <br>
-  <img width="800px" src="./src/images/machine_learning_1.png" alt="algorytm k-środków screenshot">
+  <img width="50%" src="./src/images/machine_learning_1.png" alt="algorytm k-środków screenshot">
   <br><br>
   <p>
     Zaprogramowałem w pythonie funkcję, która realizuje algorytm k-środków.<br>
@@ -14,7 +14,7 @@
   <br>
   <h5>2. Program klasyfikujący zdanie do książki</h5>
   <br>
-  <img width="800px" src="./src/images/machine_learning_2.png" alt="algorytm k-środków screenshot">
+  <img width="50%" src="./src/images/machine_learning_2.png" alt="algorytm k-środków screenshot">
   <br><br>
   <p>
     Program oczyszcza tekst z nieistotnych z pounktu widzenia uczenia maszynowego informacji.<br>
