--- a/web_dev_content.html
+++ b/web_dev_content.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <p>
     Tę stronę napisałem z użyciem Bootstrap 4.0<br>
-    Strona jest responsywna i dostosowana do wyświetlania na telefonie.<br>
+    Strona jest responsywna i dostosowana do wyświetlania na komputzerze i telefonie.<br>
     Kontent każdej podstrony jest ładowany dynamicznie.<br>
   </p>
   <a href="https://github.com/nestrockx/Portfolio/tree/gh-pages" target="_blank" style="color: #DB7093;">Repozytorium z kodem strony</a>
