--- a/emet_content.html
+++ b/emet_content.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-3">
       <p>film demonstracyjny</p>
-      <video width="260" controls autoplay muted>
+      <video width="100%" controls autoplay muted>
         <source src="./src/movies/emet/emet.mp4" type="video/mp4">
         Your browser does not support HTML video.
       </video>
