--- a/eng/nav_bar.html
+++ b/eng/nav_bar.html
@@ -23,10 +23,10 @@
 		  </li>
       <li class="nav-item dropdown">
 		    <a class="nav-link dropdown-toggle" href="" id="navbardrop" data-toggle="dropdown">
-			  PL
+			  EN
 		    </a>
 		    <div class="dropdown-menu bg-dark">
-			  <a class="dropdown-item bg-dark" style="color: white;" href="./eng/index.html">EN</a>
+			  <a class="dropdown-item bg-dark" style="color: white;" href="../index.html">PL</a>
 		    </div>
 		  </li>
 		</ul>
