--- a/eng/intro_content.html
+++ b/eng/intro_content.html
@@ -1,8 +1,7 @@
 <div class="container-fluid">
   <p>
-    Strona internetowa stworzona by przedstawić niektóre z
-    <br>moich najważniejszych projektów programistycznych,
-    <br>które wykonałem na potrzeby edukacji, jak i projektów komercyjnych.
-    <br><a href="./signaly_kr" style="color: #DB7093;">Przejdź dalej</a>
+    Website created to show some of my most important programming projects.
+    <br>Including projects for commercial and educational purposes.
+    <br><a href="./signaly_kr" style="color: #DB7093;">Move on</a>
   </p>
 </div>
