--- a/eng/nav_bar.html
+++ b/eng/nav_bar.html
@@ -7,13 +7,13 @@
 	<div class="collapse navbar-collapse" id="collapsibleNavbar">
 		<ul class="navbar-nav">
 		  <li class="nav-item" id="intro">
-			  <a class="nav-link" href="./index.html">Wstęp</a>
+			  <a class="nav-link" href="./index.html">Intro</a>
 		  </li>
 		  <li class="nav-item" id="signaly_kr">
 		    <a class="nav-link" href="./signaly_kr.html">Signaly kr</a>
 		  </li>
 		  <li class="nav-item" id="emet">
-		    <a class="nav-link" href="./emet.html">Emet - asystent głosowy</a>
+		    <a class="nav-link" href="./emet.html">Emet - voice assistant</a>
 		  </li>
 		  <li class="nav-item" id="machine_learning">
 		    <a class="nav-link" href="./machine_learning.html">Machine learning</a>
