--- a/eng/machine_learning_content.html
+++ b/eng/machine_learning_content.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
-  <h3>Programy</h3>
-  <a href="https://github.com/nestrockx/Machine_learning.git" target="_blank" style="color: #DB7093;">Repozytorium z kodem</a>
+  <h3>Programs</h3>
+  <a href="https://github.com/nestrockx/Machine_learning.git" target="_blank" style="color: #DB7093;">Repository with code</a>
   <br><br>
-  <h5>1. Algorytm k-środków</h5>
+  <h5>1. K-means algorithm</h5>
   <br>
   <img width="70%" src="../src/images/machine_learning_1.png" alt="algorytm k-środków screenshot">
   <br><br>
@@ -12,7 +12,7 @@
     a poźniej redukuje wymiarowość metodą PCA, by można było zwizualizować rezultat na płaszczyźnie.
   </p>
   <br>
-  <h5>2. Program klasyfikujący zdanie do książki</h5>
+  <h5>2. Program for classification sentence to one of two Polish books.</h5>
   <br>
   <img width="70%" src="../src/images/machine_learning_2.png" alt="algorytm k-środków screenshot">
   <br><br>
