--- a/eng/emet_content.html
+++ b/eng/emet_content.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-3">
-      <p>film demonstracyjny</p>
+      <p>demo movie</p>
       <video width="90%" controls autoplay muted>
         <source src="../src/movies/emet/emet.mp4" type="video/mp4">
         Your browser does not support HTML video.
@@ -18,7 +18,7 @@
         wyszukiwanie haseł w wikipedii, wysyłanie SMSów, obsługa nawigacji itd.<br><br>
         Jak widać na filmie, mimo że tworzyłem go z myślą o wersji systemu Android 8.0, działa równie dobrze na Androidzie 10.
       </p>
-      <a href="https://github.com/nestrockx/emet-voice-assistant.git" target="_blank" style="color: #DB7093;">Repozytorium z apk</a>
+      <a href="https://github.com/nestrockx/emet-voice-assistant.git" target="_blank" style="color: #DB7093;">Repository with apk</a>
       <br>
     </div>
 </div>
