--- a/eng/signaly_kr_content.html
+++ b/eng/signaly_kr_content.html
@@ -1,14 +1,14 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-3">
-      <p>film demonstracyjny</p>
+      <p>demo movie</p>
       <video width="90%" controls autoplay muted>
         <source src="../src/movies/signaly_kr/signaly.mp4" type="video/mp4">
         Your browser does not support HTML video.
       </video>
     </div>
     <div class="col-sm-9">
-      <h3>Signaly koreański</h3>
+      <h3>Signaly korean</h3>
       <br>
       <p style="text-align:justify">Moja nowa aplikacja na Androida do nauki alfabetu i wymowy koreańskiej.<br><br>
         Przy projektowaniu zwracałem uwagę na to, aby zaangażowanie użytkownika było jak największe.
@@ -21,9 +21,9 @@
         Druga funkcjonalość niejako wymaga od użytkownika wypowiedzenia podanych słów, co pomaga w ich zapamiętywaniu.
         Dodatkowo, dzięki usłudze rozpoznwania mowy od Google, aplikacja pokazuję poziom pewności, iż podane słowo zostało wypowiedziane poprawnie, co pozwala na polepszanie swojej wymowy.
        </p>
-       <a href="https://play.google.com/store/apps/details?id=com.onehundredtwo.testvoicy" target="-blank" style="color: #DB7093;">Link do sklepu play</a>
+       <a href="https://play.google.com/store/apps/details?id=com.onehundredtwo.testvoicy" target="-blank" style="color: #DB7093;">Link to the Google Play Store</a>
        <br>
-       <a href="https://github.com/nestrockx/signalyKR.git" target="_blank" style="color: #DB7093;">Repozytorium z najnowszą wersją apk</a>
+       <a href="https://github.com/nestrockx/signalyKR.git" target="_blank" style="color: #DB7093;">Repository with the newest version of apk</a>
        <br>
     </div>
   </div>
