--- a/eng/web_dev_content.html
+++ b/eng/web_dev_content.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
   <p>
-    Tę stronę napisałem z użyciem Bootstrap 4.0<br>
-    Strona jest responsywna i dostosowana do wyświetlania na komputerze oraz telefonie.<br>
-    Kontent każdej podstrony jest ładowany dynamicznie.<br>
+    I wrote this site with Bootstrap 4.0<br>
+    Website is responsive and displays properly on every device device.<br>
+    Content is loeaded dynamically.<br>
   </p>
   <a href="https://github.com/nestrockx/Portfolio/tree/gh-pages" target="_blank" style="color: #DB7093;">Repozytorium z kodem strony</a>
 </div>
