--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -21,7 +21,7 @@
         Druga funkcjonalość niejako wymaga od użytkownika wypowiedzenia podanych słów, co pomaga w ich zapamiętywaniu.
         Dodatkowo, dzięki usłudze rozpoznwania mowy od Google, aplikacja pokazuję poziom pewności, iż podane słowo zostało wypowiedziane poprawnie, co pozwala na polepszanie swojej wymowy.
        </p>
-       <a href="https://play.google.com/store/apps/details?id=com.onehundredtwo.testvoicy" target="-blank" style="color: #DB7093;">Link do sklepu play</a>
+       <a href="https://play.google.com/store/apps/details?id=com.onehundredtwo.testvoicy" target="-blank" style="color: #DB7093;">Link do sklepu Google Play</a>
        <br>
        <a href="https://github.com/nestrockx/signalyKR.git" target="_blank" style="color: #DB7093;">Repozytorium z najnowszą wersją apk</a>
        <br>
