--- a/eng/web_dev_content.html
+++ b/eng/web_dev_content.html
@@ -4,5 +4,5 @@
     Website is responsive and displays properly on every device device.<br>
     Content is loeaded dynamically.<br>
   </p>
-  <a href="https://github.com/nestrockx/Portfolio/tree/gh-pages" target="_blank" style="color: #DB7093;">Repozytorium z kodem strony</a>
+  <a href="https://github.com/nestrockx/Portfolio/tree/gh-pages" target="_blank" style="color: #DB7093;">Repository with this website code</a>
 </div>
