--- a/eng/web_dev_content.html
+++ b/eng/web_dev_content.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <p>
     I wrote this site with Bootstrap 4.0<br>
-    Website is responsive and displays properly on every device device.<br>
+    Website is responsive and displays properly on every device.<br>
     Content is loeaded dynamically.<br>
   </p>
   <a href="https://github.com/nestrockx/Portfolio/tree/gh-pages" target="_blank" style="color: #DB7093;">Repository with this website code</a>
