--- a/eng/web_dev_content.html
+++ b/eng/web_dev_content.html
@@ -2,7 +2,7 @@
   <p>
     I wrote this site with Bootstrap 4.0<br>
     Website is responsive and displays properly on every device.<br>
-    Content is loeaded dynamically.<br>
+    Content is loaded dynamically.<br>
   </p>
   <a href="https://github.com/nestrockx/Portfolio/tree/gh-pages" target="_blank" style="color: #DB7093;">Repository with this website code</a>
 </div>
