--- a/eng/signaly_kr_content.html
+++ b/eng/signaly_kr_content.html
@@ -10,16 +10,15 @@
     <div class="col-sm-9">
       <h3>Signaly korean</h3>
       <br>
-      <p style="text-align:justify">Moja nowa aplikacja na Androida do nauki alfabetu i wymowy koreańskiej.<br><br>
-        Przy projektowaniu zwracałem uwagę na to, aby zaangażowanie użytkownika było jak największe.
-        Dwie z głównych funkcjonalności bazują na czynnościach esencjonalnych dla nauki języka: pisanie i mówienie.
-        Starałem się by interakcja była jak najbardziej naturalna i wzbudzała uczucie satysfakcji,
-        aby użytkownik chciał korzystać z aplikacji i osiągał pożądane efekty w nauce.<br><br>
-        Aby osiągnąć mój cel zaprogramowałem system, który sprawdza czy narysowany przez użytkownika znak
-        pokrywa się ze znakiem podanym w przykładzie i zaimplementowałem kształty wszystkich znaków koreańskiego alfabetu Hangul.
-        System ten pozwala na szybką naukę znaków i przetestowania nabytych umiejętności w zakresie pisma koreańskiego.<br><br>
-        Druga funkcjonalość niejako wymaga od użytkownika wypowiedzenia podanych słów, co pomaga w ich zapamiętywaniu.
-        Dodatkowo, dzięki usłudze rozpoznwania mowy od Google, aplikacja pokazuję poziom pewności, iż podane słowo zostało wypowiedziane poprawnie, co pozwala na polepszanie swojej wymowy.
+      <p style="text-align:justify">My new android app for learning Korean alphabet and words prununciation.<br><br>
+        During app designing I payed attention to maximizing an end user engagement.
+        Two main features of the app are based on essential interactions for learning a langugage.
+        Which is writing and speaking.
+        I tried my best for interactions to be as natural as possible and keep user satisfied with using the app.<br><br>
+        To achieve my goal I programmed a system which checks if character drawn by user matches a given in an example.
+        It makes learning korean alphabet(Hangul) fast and easy and allow user to test skills he or she already has.<br><br>
+        A second interaction is based in voice input from the user. It checks what is the accuracy of recognized word, if matches a given
+        (using Google Speech Recognition service) and show it to the user so he/she can improve on pronunciation.
        </p>
        <a href="https://play.google.com/store/apps/details?id=com.onehundredtwo.testvoicy" target="-blank" style="color: #DB7093;">Link to the Google Play Store</a>
        <br>
