--- a/machine_learning_content.html
+++ b/machine_learning_content.html
@@ -14,10 +14,10 @@
   <br>
   <h5>2. Program klasyfikujący zdanie do książki</h5>
   <br>
-  <img width="70%" src="./src/images/machine_learning_2.png" alt="algorytm k-środków screenshot">
+  <img width="70%" src="./src/images/machine_learning_2.png" alt="klasyfikacja">
   <br><br>
   <p>
-    Program oczyszcza tekst z nieistotnych z pounktu widzenia uczenia maszynowego informacji.<br>
+    Program oczyszcza tekst z nieistotnych z punktu widzenia uczenia maszynowego informacji.<br>
     Później zmienia dane tekstowe(zdania z książek) na dane numeryczne, które można wykorzystać do trenowania modelu.<br>
     Na podstawie modelu program klasyfikuje dane testowe i pokazuje macierz pomyłek.
   </p>
