--- a/eng/machine_learning_content.html
+++ b/eng/machine_learning_content.html
@@ -7,18 +7,19 @@
   <img width="70%" src="../src/images/machine_learning_1.png" alt="algorytm k-środków screenshot">
   <br><br>
   <p>
-    Zaprogramowałem w pythonie funkcję, która realizuje algorytm k-środków.<br>
-    W tym przypadku dla danych 4 wymiarowych program najpierw dokonuje grupowania,<br>
-    a poźniej redukuje wymiarowość metodą PCA, by można było zwizualizować rezultat na płaszczyźnie.
+    I programmed in Python a function which implements K-means algorithm.<br>
+    In this case for 4-dimensional dataset at first it clusterize the set then
+    reduce dimensions using PCA(Principal component analysis) and thanks to that
+    shows results on 2-dimensional Euclidean space.
   </p>
   <br>
   <h5>2. Program for classification sentence to one of two Polish books.</h5>
   <br>
-  <img width="70%" src="../src/images/machine_learning_2.png" alt="algorytm k-środków screenshot">
+  <img width="70%" src="../src/images/machine_learning_2.png" alt="klas">
   <br><br>
   <p>
-    Program oczyszcza tekst z nieistotnych z pounktu widzenia uczenia maszynowego informacji.<br>
-    Później zmienia dane tekstowe(zdania z książek) na dane numeryczne, które można wykorzystać do trenowania modelu.<br>
-    Na podstawie modelu program klasyfikuje dane testowe i pokazuje macierz pomyłek.
+    Program is removing from the text insignificant for machine learning informations.<br>
+    Then transform text data to numeric data which can be used for training the model.<br>
+    Using the model program is classifying test dataset and shows accuracy and confusion matrix.
   </p>
 </div>
