--- a/emet_content.html
+++ b/emet_content.html
@@ -13,7 +13,7 @@
       <p style="text-align:justify">
         Asystent głosowy obsługujący język polski(i angielski) wypuszczony przeze mnie 9 miesięcy
         przed oficjalnym launchem asystenta google w Polsce.<br><br>
-        Umożliwiał on wykonywanie wszystkich podstawowcych czynności do zarządzania telefonem.
+        Umożliwiał on wykonywanie wszystkich podstawowych czynności do zarządzania telefonem.
         Takich jak dzwonienie na podany kontakt, uruchamianie aplikacji, ustawianie budzika,
         wyszukiwanie haseł w wikipedii, wysyłanie SMSów, obsługa nawigacji itd.<br><br>
         Jak widać na filmie, mimo że tworzyłem go z myślą o wersji systemu Android 8.0, działa równie dobrze na Androidzie 10.
