--- a/eng/emet_content.html
+++ b/eng/emet_content.html
@@ -11,12 +11,11 @@
       <h3>Emet</h3>
       <br>
       <p style="text-align:justify">
-        Asystent głosowy obsługujący język polski(i angielski) wypuszczony przeze mnie 9 miesięcy
-        przed oficjalnym launchem asystenta google w Polsce.<br><br>
-        Umożliwiał on wykonywanie wszystkich podstawowcych czynności do zarządzania telefonem.
-        Takich jak dzwonienie na podany kontakt, uruchamianie aplikacji, ustawianie budzika,
-        wyszukiwanie haseł w wikipedii, wysyłanie SMSów, obsługa nawigacji itd.<br><br>
-        Jak widać na filmie, mimo że tworzyłem go z myślą o wersji systemu Android 8.0, działa równie dobrze na Androidzie 10.
+        Voice assistant supporting Polish language(english also) released by me 9 months before
+        official launch of Google Assistant in Poland.
+        It contained all necessary features for managing a phone.
+        E.g. calling somebody, running certain app, setting alarm, searching on Wikipedia,
+        sending SMS, starting navigation etc.
       </p>
       <a href="https://github.com/nestrockx/emet-voice-assistant.git" target="_blank" style="color: #DB7093;">Repository with apk</a>
       <br>
