--- a/eng/emet_content.html
+++ b/eng/emet_content.html
@@ -12,7 +12,7 @@
       <br>
       <p style="text-align:justify">
         Voice assistant supporting Polish language(english also) released by me 9 months before
-        official launch of Google Assistant in Poland.
+        official launch of Google Assistant in Poland.<br><br>
         It contained all necessary features for managing a phone.
         E.g. calling somebody, running certain app, setting alarm, searching on Wikipedia,
         sending SMS, starting navigation etc.
