--- a/intro_content.html
+++ b/intro_content.html
@@ -3,6 +3,15 @@
     Strona internetowa stworzona by przedstawić niektóre z
     <br>moich najważniejszych projektów programistycznych,
     <br>które wykonałem na potrzeby edukacji, jak i projektów komercyjnych.
+    <br>
+
+    <p>Kontakt:</p>
+    <br>
+    <a href="<a href="mailto:pawelkraszewski98@gmail.com">pawelkraszewski98@gmail.com</a>
+    <a href="<a href="https://www.instagram.com/wegielek_art/">@wegielek_art</a>
+
+
+    <br>
     <br><a href="./signaly_kr" style="color: #DB7093;">Przejdź dalej</a>
   </p>
 </div>
