--- a/intro_content.html
+++ b/intro_content.html
@@ -5,9 +5,10 @@
     <br>które wykonałem na potrzeby edukacji, jak i projektów komercyjnych.
     <br>
 
-    <p>Kontakt:</p>
+    Kontakt:
     <br>
     <a href="<a href="mailto:pawelkraszewski98@gmail.com">pawelkraszewski98@gmail.com</a>
+    <br>
     <a href="<a href="https://www.instagram.com/wegielek_art/">@wegielek_art</a>
 
 
