--- a/intro_content.html
+++ b/intro_content.html
@@ -7,9 +7,9 @@
 
     Kontakt:
     <br>
-    <a href="<a href="mailto:pawelkraszewski98@gmail.com">pawelkraszewski98@gmail.com</a>
+    <a href="mailto:pawelkraszewski98@gmail.com">pawelkraszewski98@gmail.com</a>
     <br>
-    <a href="<a href="https://www.instagram.com/wegielek_art/">@wegielek_art</a>
+    <a href="https://www.instagram.com/wegielek_art/">@wegielek_art</a>
 
 
     <br>
