--- a/eng/intro_content.html
+++ b/eng/intro_content.html
@@ -2,6 +2,18 @@
   <p>
     Website created to show some of my most important programming projects.
     <br>Including projects I made for commercial and educational purposes.
+    <br>
+    <br>
+
+    Contact:
+    <br>
+    <a href="mailto:pawelkraszewski98@gmail.com">pawelkraszewski98@gmail.com</a>
+    <br>
+    <a href="https://www.instagram.com/wegielek_art/">@wegielek_art</a>
+
+
+    <br>
     <br><a href="./signaly_kr" style="color: #DB7093;">Move on</a>
+
   </p>
 </div>
