--- a/eng/signaly_kr_content.html
+++ b/eng/signaly_kr_content.html
@@ -10,7 +10,7 @@
     <div class="col-sm-9">
       <h3>Signaly korean</h3>
       <br>
-      <p style="text-align:justify">My new android app for learning Korean alphabet and words prununciation.<br><br>
+      <p style="text-align:justify">My new android app for learning Korean alphabet and words pronunciation.<br><br>
         During app designing I payed attention to maximizing an end user engagement.
         Two main features of the app are based on essential interactions for learning a langugage.
         Which is writing and speaking.
