--- a/eng/emet_content.html
+++ b/eng/emet_content.html
@@ -13,8 +13,8 @@
       <p style="text-align:justify">
         Voice assistant supporting Polish language(english also) released by me 9 months before
         official launch of Google Assistant in Poland.<br><br>
-        It contained all necessary features for managing a phone.
-        E.g. calling somebody, running certain app, setting alarm, searching on Wikipedia,
+        It contained all necessary features for managing a phone
+        e.g. calling somebody, running certain app, setting alarm, searching on Wikipedia,
         sending SMS, starting navigation etc.
       </p>
       <a href="https://github.com/nestrockx/emet-voice-assistant.git" target="_blank" style="color: #DB7093;">Repository with apk</a>
