--- a/eng/signaly_kr_content.html
+++ b/eng/signaly_kr_content.html
@@ -2,9 +2,8 @@
   <div class="row">
     <div class="col-sm-3">
       <p>demo movie</p>
-      <video controls width="90%">
-        <source src="../src/movies/signaly_kr/signaly.mp4" type="video/mp4">
-          <source src="../src/movies/signaly_kr/signaly.webm" type="video/webm">
+      <video width="90%" controls>
+        <source src="https://github.com/nestrockx/Portfolio/tree/gh-pages/src/movies/signaly_kr/signaly.mp4" type="video/mp4">
         Your browser does not support HTML video.
       </video>
     </div>
