--- a/intro_content.html
+++ b/intro_content.html
@@ -8,6 +8,8 @@
 
     Kontakt:
     <br>
+    <a href="https://www.linkedin.com/in/paweł-kraszewski-87b872162/">LinkedIn: Paweł Kraszewski</a>
+    <br>
     <a href="mailto:pawelkraszewski98@gmail.com">pawelkraszewski98@gmail.com</a>
     <br>
     <a href="https://www.instagram.com/wegielek_art/">@wegielek_art</a>
