--- a/eng/intro_content.html
+++ b/eng/intro_content.html
@@ -7,6 +7,8 @@
 
     Contact:
     <br>
+    <a href="https://www.linkedin.com/in/paweł-kraszewski-87b872162/">LinkedIn: Paweł Kraszewski</a>
+    <br>
     <a href="mailto:pawelkraszewski98@gmail.com">pawelkraszewski98@gmail.com</a>
     <br>
     <a href="https://www.instagram.com/wegielek_art/">@wegielek_art</a>
