--- a/index.html
+++ b/index.html
@@ -13,14 +13,7 @@
 </head>
 <body>
 
-<div id="custom_nav_bar"></div>
-<br>
-<div id="content"></div>
-
-<div class="footer">
-  <p>Paweł Kraszewski 2020</p>
-</div>
-
+  <h1>DDD</h1>
 
 </body>
 </html>
