navbar and webdev update

--- a/web_dev_content.html
+++ b/web_dev_content.html
@@ -1,8 +1,6 @@
 <div class="container-fluid">
   <p>
-    Tę stronę napisałem z użyciem Bootstrap 4.0<br>
-    Strona jest responsywna i dostosowana do wyświetlania na komputerze oraz telefonie.<br>
-    Kontent każdej podstrony jest ładowany dynamicznie.<br>
+    Aplikacja w angularze do sprawdzania pogody.
   </p>
-  <a href="https://github.com/nestrockx/Portfolio/tree/gh-pages" target="_blank" style="color: #DB7093;">Repozytorium z kodem strony</a>
+  <a href="https://github.com/nestrockx/Weather_app" target="_blank" style="color: #DB7093;">Repozytorium z kodem strony</a>
 </div>
