--- a/eng/web_dev_content.html
+++ b/eng/web_dev_content.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
   <p>
-    I wrote this site with Bootstrap 4.0<br>
-    Website is responsive and displays properly on every device.<br>
-    Content is loaded dynamically.<br>
+    Angular application for checking the weather forecast.
   </p>
-  <a href="https://github.com/nestrockx/Portfolio/tree/gh-pages" target="_blank" style="color: #DB7093;">Repository with this website code</a>
+  <img width="50%" src="./src/images/weather_app.png" alt="weather">
+  <br><br>
+  <a href="https://github.com/nestrockx/Weather_app" target="_blank" style="color: #DB7093;">Repozytorium z kodem strony</a>
 </div>
