--- a/eng/web_dev_content.html
+++ b/eng/web_dev_content.html
@@ -2,7 +2,7 @@
   <p>
     Angular application for checking the weather forecast.
   </p>
-  <img width="50%" src="./src/images/weather_app.png" alt="weather">
+  <img width="50%" src="../src/images/weather_app.png" alt="weather">
   <br><br>
   <a href="https://github.com/nestrockx/Weather_app" target="_blank" style="color: #DB7093;">Repozytorium z kodem strony</a>
 </div>
