--- a/eng/intro_content.html
+++ b/eng/intro_content.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <p>
     Website created to show some of my most important programming projects.
-    <br>Including projects I made for commercial and educational purposes.
+    <br>Including projects I made for educational purposes.
     <br>
     <br>
 
