--- a/intro_content.html
+++ b/intro_content.html
@@ -2,7 +2,7 @@
   <p>
     Strona internetowa stworzona by przedstawić niektóre z
     <br>moich najważniejszych projektów programistycznych,
-    <br>które wykonałem na potrzeby edukacji, jak i projektów komercyjnych.
+    <br>które wykonałem na potrzeby edukacji i nie tylko.
     <br>
     <br>
 
