--- a/eng/design_content.html
+++ b/eng/design_content.html
@@ -11,10 +11,11 @@
         <h3>Design</h3>
         <br>
         <p style="text-align:justify">
-          Signaly Korean: During app designing I payed attention to maximizing an end user engagement.
+          Signaly Korean:<br>During app designing I payed attention to maximizing an end user engagement.
          </p>
          <a href="https://play.google.com/store/apps/details?id=com.onehundredtwo.testvoicy" target="-blank" style="color: #DB7093;">Link to the Google Play Store</a>
          <br><br>
+         <p>UI design:</p>
          <a href="https://www.figma.com/proto/JJTWmDwT2fM5Pl2bYtrH7I/Ninateka?node-id=14%3A0&starting-point-node-id=76%3A0&scaling=scale-down" target="_blank" style="color: #DB7093;">UI for TV app - figma project</a>
          <br><br>
          <a href="https://www.figma.com/proto/JJTWmDwT2fM5Pl2bYtrH7I/Ninateka?node-id=14%3A0&starting-point-node-id=76%3A0&scaling=scale-down" target="_blank" style="color: #DB7093;">UI for TV app - figma project</a>
