--- a/eng/design_content.html
+++ b/eng/design_content.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
       <div class="col-sm-3">
-        <p>demo movie</p>
+        <p>Signaly kr - demo movie</p>
         <video width="90%" controls autoplay muted>
           <source src="../src/movies/signaly_kr/Signal_Vertical.mp4" type="video/mp4">
           Your browser does not support HTML video.
