singalyKR link update

--- a/eng/signaly_kr_content.html
+++ b/eng/signaly_kr_content.html
@@ -24,6 +24,8 @@
        <br>
        <a href="https://github.com/nestrockx/signalyKR.git" target="_blank" style="color: #DB7093;">Repository with the newest version of apk</a>
        <br>
+       <a href="https://github.com/nestrockx/signalyKR_code.git" target="_blank" style="color: #DB7093;">Repository with the app code</a>
+       <br>
     </div>
   </div>
 </div>
