--- a/signaly_kr_content.html
+++ b/signaly_kr_content.html
@@ -25,6 +25,8 @@
        <br>
        <a href="https://github.com/nestrockx/signalyKR.git" target="_blank" style="color: #DB7093;">Repozytorium z najnowszą wersją apk</a>
        <br>
+       <a href="https://github.com/nestrockx/signalyKR_code.git" target="_blank" style="color: #DB7093;">Repozytorium z kodem aplikacji</a>
+       <br>
     </div>
   </div>
 </div>
